refactor: simplify user api
