# core/api/oas_response_decoders_gen.go
@@ -248,7 +248,7 @@ func decodeGetEventPingResponse(resp *http.Response) (res GetEventPingRes, _ err
 	return res, validate.UnexpectedStatusCode(resp.StatusCode)
 }
 
-func decodeGetUsersUserIdResponse(resp *http.Response) (res GetUsersUserIdRes, _ error) {
+func decodeGetUserResponse(resp *http.Response) (res GetUserRes, _ error) {
 	switch resp.StatusCode {
 	case 200:
 		// Code 200.
@@ -265,6 +265,76 @@ func decodeGetUsersUserIdResponse(resp *http.Response) (res GetUsersUserIdRes, _
 			d := jx.DecodeBytes(buf)
 
 			var response UserGet
+			if err := func() error {
+				if err := response.Decode(d); err != nil {
+					return err
+				}
+				if err := d.Skip(); err != io.EOF {
+					return errors.New("unexpected trailing data")
+				}
+				return nil
+			}(); err != nil {
+				err = &ogenerrors.DecodeBodyError{
+					ContentType: ct,
+					Body:        buf,
+					Err:         err,
+				}
+				return res, err
+			}
+			return &response, nil
+		default:
+			return res, validate.InvalidContentType(ct)
+		}
+	case 400:
+		// Code 400.
+		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
+		if err != nil {
+			return res, errors.Wrap(err, "parse media type")
+		}
+		switch {
+		case ct == "application/json":
+			buf, err := io.ReadAll(resp.Body)
+			if err != nil {
+				return res, err
+			}
+			d := jx.DecodeBytes(buf)
+
+			var response BadRequestError
+			if err := func() error {
+				if err := response.Decode(d); err != nil {
+					return err
+				}
+				if err := d.Skip(); err != io.EOF {
+					return errors.New("unexpected trailing data")
+				}
+				return nil
+			}(); err != nil {
+				err = &ogenerrors.DecodeBodyError{
+					ContentType: ct,
+					Body:        buf,
+					Err:         err,
+				}
+				return res, err
+			}
+			return &response, nil
+		default:
+			return res, validate.InvalidContentType(ct)
+		}
+	case 401:
+		// Code 401.
+		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
+		if err != nil {
+			return res, errors.Wrap(err, "parse media type")
+		}
+		switch {
+		case ct == "application/json":
+			buf, err := io.ReadAll(resp.Body)
+			if err != nil {
+				return res, err
+			}
+			d := jx.DecodeBytes(buf)
+
+			var response UnauthorisedError
 			if err := func() error {
 				if err := response.Decode(d); err != nil {
 					return err
@@ -1083,7 +1153,7 @@ func decodeGetWebsitesIDActiveResponse(resp *http.Response) (res GetWebsitesIDAc
 	return res, validate.UnexpectedStatusCode(resp.StatusCode)
 }
 
-func decodePatchUsersUserIdResponse(resp *http.Response) (res PatchUsersUserIdRes, _ error) {
+func decodePatchUserResponse(resp *http.Response) (res PatchUserRes, _ error) {
 	switch resp.StatusCode {
 	case 200:
 		// Code 200.
