# core/api/oas_response_encoders_gen.go
@@ -124,12 +124,38 @@ func encodeGetEventPingResponse(response GetEventPingRes, w http.ResponseWriter,
 	}
 }
 
-func encodeGetUsersUserIdResponse(response GetUsersUserIdRes, w http.ResponseWriter, span trace.Span) error {
+func encodeGetUserResponse(response GetUserRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *UserGet:
 		w.Header().Set("Content-Type", "application/json")
 		w.WriteHeader(200)
 		span.SetStatus(codes.Ok, http.StatusText(200))
+
+		e := jx.GetEncoder()
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	case *BadRequestError:
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(400)
+		span.SetStatus(codes.Error, http.StatusText(400))
+
+		e := jx.GetEncoder()
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	case *UnauthorisedError:
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(401)
+		span.SetStatus(codes.Error, http.StatusText(401))
 
 		e := jx.GetEncoder()
 		response.Encode(e)
@@ -458,7 +484,7 @@ func encodeGetWebsitesIDActiveResponse(response GetWebsitesIDActiveRes, w http.R
 	}
 }
 
-func encodePatchUsersUserIdResponse(response PatchUsersUserIdRes, w http.ResponseWriter, span trace.Span) error {
+func encodePatchUserResponse(response PatchUserRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *UserGet:
 		w.Header().Set("Content-Type", "application/json")
